# OpenFEA

./: README.md  pyproject.toml  setup.cfg
.github/workflows /: publish-to-pypi.yml
