
[project]
name = "hyperfem"
description = "A finite element analysis software"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
keywords = [
  "python", 
  "constitution",
  "scientific-computing",
  "fem",
  "finite-elements-analysis",
  "hyperelasticity", 
]

authors = [
  {email = "mohamed.zaaraoui.999@gmail.com"},
  {name = "Mohamed ZAARAOUI"}
]

classifiers = [
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities"
]


dynamic = ["version"] # Version is read from hyperfem/__init__.py

dependencies = [
  "numpy",
  "scipy",
  "hypermat"
]

[project.urls]
homepage = "https://hyperfem.readthedocs.io/en/latest"
code = "https://github.com/ZAARAOUI999/hyperfem"
issues = "https://github.com/ZAARAOUI999/hyperfem/issues"

[tool.setuptools.dynamic]
version = {attr = "hyperfem.__version__"}

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
